#pragma once

#include "Building.h"

// A class that represents a room.

class Room : public Building{
public:
    Room(const buildingDec &);
private:
};